--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 }
 .inicio{
     background-image: url("http://www.utel.edu.mx/blog/wp-content/uploads/2014/02/shutterstock_148972376.jpg");
+    background-size: cover;
     background-position: bottom
 }
 #conteudoInicio{
